Fix contrast issues

--- a/frontend/styles/components/_footer.scss
+++ b/frontend/styles/components/_footer.scss
@@ -65,7 +65,7 @@
 }
 
 .footer-social-link-text {
-  opacity: 0.5;
+  opacity: 0.95;
   transition: opacity 0.3s ease;
 }
 
